{
    "name": "P3Controls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "61bf51f8-d768-4f9a-be02-51343a651403",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "43d4cf93-1dae-4070-b953-9f9605cdb178",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "AimMove",
                    "type": "Value",
                    "id": "706632f5-1adf-4083-bd8d-8a97687b05d4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Pickup",
                    "type": "Button",
                    "id": "09e0dbe8-05a8-42c9-a32c-bfc51e02448f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Use",
                    "type": "Button",
                    "id": "b83cb674-5794-42d1-b74d-a8b98ac7fb82",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Toggle",
                    "type": "Button",
                    "id": "63bad0f2-0142-4bdf-a1ef-e57a336730f3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Throw",
                    "type": "Button",
                    "id": "1de90889-5d68-4554-879a-6be5882abf88",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interect",
                    "type": "Button",
                    "id": "36eda647-1565-4dcc-a581-939f7458ffd7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1c0c196a-5da9-4713-aaf8-2c13d027ab6b",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "384af685-24e7-476d-a96d-7b237fe0ec06",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pickup",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3619265d-06f0-46f1-a5bd-94ded7c97101",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AimMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "de6b44f9-6449-47c7-a279-6ea316a776ee",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Use",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb06d8a4-ddf2-4bd7-a537-26cd74fa2a79",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Toggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc25bb7b-de41-40d5-befa-edd0e6695253",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Throw",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e28586ff-b14b-4a79-93e2-3e1e8541bb25",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interect",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}